# All-round-Conversion-Tool

./: .gitignore  IMPROVEMENT_PLAN.md  OPTIMIZATION_PROPOSAL.md  README.md  build_portable.py  build_release.ps1  cli.py  constants.py  engines.py  execution_registry.py  formats.py  history.py  installer.iss  logging_config.py  main.py  monitor.py  presets.py  project.py  pyproject.toml  queue_manager.py  requirements.txt  styles.qss  task_models.py  ui.py  ui_conversion.py  ui_file_table.py  ui_settings.py  utils.py  widgets.py  widgets_old.py  workers.py  流光-installer.iss  流光.spec
.github/workflows/: ci.yml  release.yml
engines/: __init__.py  _common.py  codec_compat.py  compress_engine.py  document_engine.py  excel_engine.py  ffmpeg_core.py  ffmpeg_utils.py  format_handlers.py  gif_engine.py  gpu_scheduler.py  image_engine.py  image_resize.py  pdf_convert.py  pdf_tools.py  video_compress.py  watermark_engine.py
tests/: QA_TEST_DESIGN.md  test_codec_compat.py  test_execution_registry.py  test_format_handlers.py  test_media_utils.py  test_new_engines.py  test_new_features.py  test_presets.py  test_queue_manager.py
themes/: __init__.py  cute.qss  cute_anim.py  cyberpunk.qss  dark.qss  minimal.qss  starfield.qss  warm.qss  warm_anim.py
